# TrabalhoEDII

./: .gitignore  ArvoreB.cpp  ArvoreB.h  ArvoreHuffman.cpp  ArvoreHuffman.h  ArvoreVP.cpp  ArvoreVP.h  ArvoreVP_adaptativa.cpp  ArvoreVP_adaptativa.h  CMakeLists.txt  Hash.cpp  Hash.h  HashEncadeado.cpp  HashEncadeado.h  HeapMin.cpp  HeapMin.h  LeituraArquivo.cpp  LeituraArquivo.h  ListaEncadeada.cpp  ListaEncadeada.h  NoArvoreB.cpp  NoArvoreB.h  NoHeapMin.cpp  NoHeapMin.h  Node.cpp  Node.h  Objeto.cpp  Objeto.h  Ordenacao.cpp  Ordenacao.h  README.md  Usuario.cpp  Usuario.h  leitura_arvore_Leitura_Funciana_V3.0.cbp  leitura_arvore_Leitura_Funciana_V3.0.depend  leitura_arvore_Leitura_Funciana_V3.0.layout  main.cpp
MergeSort/: main.cpp
Sorts/: CMakeLists.txt  main.cpp
