cmake_minimum_required(VERSION 3.12)
project(Sorts)

set(CMAKE_CXX_STANDARD 14)

add_executable(Sorts main.cpp cmake-build-debug/CMakeFiles/Sorts.dir/NoAVL.cpp cmake-build-debug/CMakeFiles/Sorts.dir/NoAVL.h cmake-build-debug/CMakeFiles/Sorts.dir/ArvoreBinariaBusca.cpp cmake-build-debug/CMakeFiles/Sorts.dir/ArvoreBinariaBusca.h)